fixing video on mobile

--- a/postcard-core/styles/postcard.sass
+++ b/postcard-core/styles/postcard.sass
@@ -123,9 +123,15 @@ ul.postcard-feed
     clear: both
     display: block
     float: left
+    margin-top: 10/$em
     margin-left: 110/$em
     padding: 5/$em
     +single-box-shadow($medium-grey, 0, 0, 2px, 1px)
+    @media all and (max-width: 480px)
+      margin-left: 10/$em
+
+  video
+    max-width: 100%
 
   img.feed-image
     width: 100%
